# NoteApp

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  build.sh  example_notebook.json  main.cpp
src/core/: document.cpp  document.h  drawingobject.cpp  drawingobject.h  note.cpp  note.h  object.cpp  object.h  page.cpp  page.h  storage.cpp  storage.h  textobject.cpp  textobject.h
src/gui/: mainwindow.cpp  mainwindow.h  objectselector.cpp  objectselector.h  pagecanvas.cpp  pagecanvas.h  toolbar.cpp  toolbar.h
